Fix query delete button height on small screens

--- a/frontend/src/app/query-history/query-history.component.css
+++ b/frontend/src/app/query-history/query-history.component.css
@@ -72,7 +72,7 @@ td.result-count {
 }
 
 @media (max-width: 600px) {
-  button.btn img {
+  button.btn img, button.btn .fake-img {
     height: 4vw;
   }
 }
